# 2d-sds

./: .gitignore  MANIFEST.in  Makefile  README.md  conda-lock.yml  env.sh  environment.yml  launch_queued.sh  main.py  pyproject.toml  requirements.lock.txt  requirements.txt
algorithm/: __init__.py  base.py  sds.py
benchmark_conf/: base.yaml  dds.yaml  ism.yaml  ism_gaussian.yaml  sds.yaml  sds_gaussian.yaml  vsd.yaml  vsd_gaussian.yaml
benchmark_conf/algorithm/: dds_algorithm.yaml  ism_algorithm.yaml  sds_algorithm.yaml  tas_algorithm.yaml
benchmark_conf/rasterizer/: layered_simple.yaml  pixels.yaml
benchmark_conf/wt_schedule/: dreamfusion.yaml  dreamtime.yaml
benchmark_scripts/: experiment_guidance_scale.sh  experiment_guidance_scale_run.sh  experiment_guidance_scale_submit.sh  experiment_ism_hyperparam.sh  experiment_ism_hyperparam_run.sh  experiment_ism_hyperparam_submit.sh  experiment_wt_schedule.sh  experiment_wt_schedule_run.sh  experiment_wt_schedule_submit.sh
conf/: base.yaml  dds.yaml  ism.yaml  ism_gaussian.yaml  pds.yaml  sds.yaml  sds_gaussian.yaml  vsd.yaml  vsd_gaussian.yaml
docs/: DEVELOPMENT.md  INSTALL.md  USAGE.md
env/: cache_dir.env  offline.env  online.env
env.d/: .gitignore  activate.sh  bootstrap.py  project.env
rasterizer/: __init__.py  base.py  diffsvg.py  pixels.py
scripts/: diffusion_inference.py
sds_2d/: __init__.py
t_schedule/: __init__.py
test/: test_2d_gaussian_gsplat.py  test_2d_gaussian_rasterizer.py  test_dreamtime_wt.py  test_independent_wt.py  test_matplotlib.py  test_pixels_rasterizer.py
utils/: log.py  misc.py  optimizer.py  stable_diffusion.py  types.py
w_schedule/: __init__.py
(+43 files in other folders)
