[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sds_2d"
version = "0.0.0"
description = "A 2D SDS experimentation framework"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

# extra dependencies
[project.optional-dependencies]
dev = [
    "pytest~=7.4.3",
    "pytest-cov~=4.1.0"
]

[tool.setuptools]
packages = ["sds_2d"]

## cli entrypoint
#[project.scripts]
#sds2d = "sds_2d.__main__:main"
